Add participant modal

--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -11,6 +11,9 @@
 
 @brand-primary: @main-brand-color;
 
+@padding-huge-vertical: 15px;
+@padding-huge-horizontal: 20px;
+
 @btn-load-more-bg: @third-brand-color;
 @btn-load-more-color: #fff;
 @btn-load-more-border: darken(@btn-load-more-bg, 5%);
@@ -18,6 +21,10 @@
 @btn-options-bg: @fourth-brand-color;
 @btn-options-color: #fff;
 @btn-options-border: darken(@btn-options-bg, 5%);
+
+@btn-action-bg: @third-brand-color;
+@btn-action-color: #fff;
+@btn-action-border: darken(@btn-action-bg, 5%);
 
 @input-border-focus: @main-brand-color;
 
