--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -34,6 +34,12 @@
   }
 }
 
+.event-actions {
+  @media (max-width: @screen-xs-max) {
+    margin-top: 15px;
+  }
+}
+
 .expense-board {
   @media (max-width: @screen-xs-max) {
     // Kills affix behaviour on xs screen
