--- a/views/templates/modal/delete_expense_confirmation.jade
+++ b/views/templates/modal/delete_expense_confirmation.jade
@@ -1,5 +1,5 @@
 .modal-header
-  button.close(type="button" aria-label=t("app.event.modal.delete.close") ng-click="model.close(false)")
+  button.close(type="button" aria-label=t("app.event.modal.close") ng-click="model.close(false)")
     span(aria-hidden="true") &times;
   h4.modal-title= t("app.event.modal.delete.title")
 .modal-body
@@ -10,4 +10,4 @@
   button.btn.btn-primary(type="button" ng-click="model.close(true)")
     span.glyphicon.glyphicon-ok-circle(aria-hidden="true")
     |  #{t("app.event.modal.delete.confirm")}
-  button.btn.btn-default(type="button" ng-click="model.close(false)")= t("app.event.modal.delete.cancel")
+  button.btn.btn-default(type="button" ng-click="model.close(false)")= t("app.event.modal.cancel")
