--- a/src/less/style.less
+++ b/src/less/style.less
@@ -61,5 +61,6 @@
 @import "includes/main";
 @import "includes/notification";
 @import "includes/element";
+@import "includes/nav-tabs";
 @import "includes/modal";
 @import "includes/loading-spinner";
