--- a/src/less/style.less
+++ b/src/less/style.less
@@ -59,6 +59,7 @@
 @import "includes/angular";
 @import "includes/ng-strap";
 @import "includes/main";
+@import "includes/participant";
 @import "includes/notification";
 @import "includes/element";
 @import "includes/nav-tabs";
