--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -18,5 +18,7 @@
           li(role="presentation" ui-sref-active="active")
             a(ui-sref="event.details")= t("app.event.tabs.details")
           li(role="presentation" ui-sref-active="active")
+            a(ui-sref="event.participants")= t("app.event.tabs.participants")
+          li(role="presentation" ui-sref-active="active")
             a(ui-sref="event.result")= t("app.event.tabs.result")
       div(ui-view="")
