--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -16,7 +16,7 @@
       nav
         ul.nav.nav-tabs.nav-tabs-content
           li(role="presentation" ui-sref-active="active")
-            a(ui-sref="event.details")= t("app.event.tabs.details")
+            a(ui-sref="event.expenses")= t("app.event.tabs.expenses")
           li(role="presentation" ui-sref-active="active")
             a(ui-sref="event.participants")= t("app.event.tabs.participants")
           li(role="presentation" ui-sref-active="active")
