--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -20,5 +20,5 @@
           li(role="presentation" ui-sref-active="active")
             a(ui-sref="event.participants")= t("app.event.tabs.participants")
           li(role="presentation" ui-sref-active="active")
-            a(ui-sref="event.result")= t("app.event.tabs.result")
+            a(ui-sref="event.results")= t("app.event.tabs.results")
       div(ui-view="")
