--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -1,7 +1,3 @@
-.event-header {
-  margin-bottom: 35px;
-}
-
 .jumbotron {
   text-align: center;
   margin-bottom: 0;
@@ -24,6 +20,19 @@
   font-weight: bold;
 }
 
+#eventForm hr {
+  border-top: 5px solid #eee;
+}
+
+.participants-header {
+  border-bottom: 5px solid #eee;
+  margin-bottom: 1.3em;
+}
+
+.event-header {
+  margin-bottom: 35px;
+}
+
 .event-layout-aside {
   @media (min-width: @screen-md-min) {
     margin-top: 44px;
@@ -36,10 +45,6 @@
   .btn-action {
     white-space: normal;
   }
-}
-
-#eventForm hr {
-  border-top: 5px solid #EEEEEE;
 }
 
 .expense-board {
