--- a/views/templates/event/includes/expense_creation_panel.jade
+++ b/views/templates/event/includes/expense_creation_panel.jade
@@ -7,15 +7,13 @@
       .row
         .col-xs-12
           .form-group(element-validation="xpensCtrl.form.expenseLabel")
-            label.control-label(for="inputExpenseLabel") *&nbsp;
-              = t("app.event.expense_form.label")
+            label.control-label(for="inputExpenseLabel")= t("app.event.expense_form.label")
             input#inputExpenseLabel.form-control(type="text" ng-model="xpensCtrl.expense.label"
                 name="expenseLabel" placeholder="e.g. #{t('app.event.expense_form.label_ph')}" required="")
       .row
         .col-sm-6.col-xs-7
           .form-group(element-validation="xpensCtrl.form.expenseAmount")
-            label.control-label(for="inputExpenseAmount") *&nbsp;
-              = t("app.event.expense_form.amount")
+            label.control-label(for="inputExpenseAmount")= t("app.event.expense_form.amount")
             .input-group
               .input-group-addon(debts-currency-symbol="::")
               input#intputExpenseAmount.form-control.text-right(ng-model="xpensCtrl.expense.amount" required=""
@@ -23,8 +21,7 @@
               .input-group-addon= t("app.event.expense_form.amount_precision")
         .col-sm-6.col-xs-12
           .form-group(element-validation="xpensCtrl.form.expensePurchaser")
-            label.control-label(for="inputExpensePurchaser") *&nbsp;
-              = t("app.event.expense_form.purchaser")
+            label.control-label(for="inputExpensePurchaser")= t("app.event.expense_form.purchaser")
             br
             button#inputExpensePurchaser.btn.btn-default(type="button" ng-model="xpensCtrl.expense.purchaserUuid"
                 bs-select="" data-placeholder=t("app.event.expense_form.purchaser_ph") name="expensePurchaser" required=""
@@ -32,7 +29,7 @@
       .row
         .col-xs-12
           .form-group(element-validation="xpensCtrl.form.expenseParticipants")
-            label.control-label(for="inputExpenseParticipants") * #{t("app.event.expense_form.share_with.label")}
+            label.control-label(for="inputExpenseParticipants")= t("app.event.expense_form.share_with.label")
             br
             button#inputExpenseParticipants.btn.btn-default(type="button" ng-model="xpensCtrl.expense.participantsUuids"
                 bs-select="" data-multiple="1" data-all-none-buttons="true" name="expenseParticipants"
@@ -54,5 +51,3 @@
           data-loading-text=t("app.event.expense_form.loading"))
         span.glyphicon.glyphicon-plus(aria-hidden="true")
         |  #{t("app.event.expense_form.submit")}
-  .debts-panel-footer
-    p.text-muted * #{t("app.form.field_required_help")}
