Refactor: list of errors

--- a/views/templates/event/includes/expense_creation_panel.jade
+++ b/views/templates/event/includes/expense_creation_panel.jade
@@ -45,8 +45,9 @@
                 placeholder=t("app.event.expense_form.description_ph"))
       .row(ng-cloak="" ng-if="xpensCtrl.errors")
         .col-xs-12
-          .alert.alert-danger.text-center
-            div(ng-repeat="error in xpensCtrl.errors" ng-i18next="app.event.expense_form.errors.{{error.message}}")
+          .alert.alert-danger
+            ul
+              li(ng-repeat="error in xpensCtrl.errors" ng-i18next="app.event.expense_form.errors.{{error.message}}")
       button.btn.btn-block.btn-primary(type="submit" disable-on-request="" ng-disabled="xpensCtrl.form.$invalid"
           data-loading-text=t("app.event.expense_form.loading"))
         span.glyphicon.glyphicon-plus(aria-hidden="true")
