--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -54,8 +54,9 @@ main
                     | &nbsp;#{t("app.home.event_form.add_participant")}
             .row(ng-cloak="" ng-if="model.errors")
               .col-sm-10.col-sm-offset-1.col-xs-12
-                .alert.alert-danger.text-center
-                  div(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
+                .alert.alert-danger
+                  ul
+                    li(ng-repeat="error in model.errors" ng-i18next="app.home.event_form.errors.{{error.message}}")
             .row
               .col-sm-10.col-sm-offset-1.col-xs-12
                 .form-group
